--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ body{
   cursor: pointer;
 }
 
+
 #logo::after{
   position: absolute;
   content: url('./assets/hourglass-start-solid.svg');
@@ -67,9 +68,24 @@ body{
   z-index: 500;
   flex-flow: column;
   background: #fff;
-  padding: 30px 20px;
+  padding: 45px 20px 30px 20px;
   box-shadow: 4px 4px 10px #b5b5b5;
   border-radius: 20px;
+}
+
+#hide{
+  position: relative;
+}
+
+#hide::after{
+  content: url('./assets/xmark-solid.svg');
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -36px;
+  left: -18px;
+  cursor: pointer;
+  color: #d65353;
 }
 
 .item{
@@ -80,6 +96,13 @@ body{
   width: 200px;
   height: fit-content;
   margin-bottom: 50px;
+  position: relative;
+}
+
+.item span{
+  position: absolute;
+  right: 10px;
+  font-size: smaller;
 }
 
 .item:last-child{
@@ -92,8 +115,7 @@ body{
 }
 
 
-
-#reset-btn{
+#save-btn, #reset-btn{
   border: none;
   outline: none;
   box-shadow: -3px 5px 10px #d7d7d7;
@@ -105,6 +127,16 @@ body{
   transition: background-color 0.3s ease;
 }
 
+#save-btn{
+   background-color: #c8f0ff;
+   margin-bottom: 10px;
+}
+
+
+
+#save-btn:hover {
+  background-color: #bcecfe; /* Slightly darker grey */
+}
 
 
 #reset-btn:hover {
@@ -152,6 +184,8 @@ input[type="range"]::-moz-range-thumb {
   align-items: center;
   justify-content: center;
   margin-top: 60px;
+  width: 100%;
+  height: 90vh;
 }
 
 #clock{
@@ -179,7 +213,7 @@ input[type="range"]::-moz-range-thumb {
   font-size: 1rem;
   border: none;
   outline: none;
-  background-color: #d2691e;
+  background-color: #000;
   color: #fff;
   border-radius: 10px;
   box-shadow: -5px 5px 5px rgba(214, 214, 214, 0.76);
@@ -187,14 +221,14 @@ input[type="range"]::-moz-range-thumb {
 }
 
 #promo-btn{
-  background-color: #000;
+  background-color: #96c642e3;
 }
 
 #break-btn{
-  background-color: rgb(237, 125, 45);
+  background-color: #ed7d2d;
 }
 
-#start-btn{
+#start-btn, #stop-btn{
   width: 170px;
   height: 40px;
   display: flex;
@@ -208,4 +242,30 @@ input[type="range"]::-moz-range-thumb {
   box-shadow: -5px 10px 10px #d7d7d7;
   font-size: 1.2rem;
   cursor: pointer;
+}
+
+#stop-btn{
+  background-color: #ffb0b0;
+}
+
+@media screen and (max-width: 768px) {
+    /* Adjustments for smaller screens */
+    #settings-menue {
+        top: 30px;
+        right: 20px;
+    }
+    
+    .item {
+        width: 180px;
+    }
+
+    #setngs-btn{
+      right: 10px;
+    }
+    
+    .top-btns {
+        width: 100px;
+        font-size: 0.8rem;
+        padding: 10px 7px;
+    }
 }
